--- a/frontend/templates/create_card.html
+++ b/frontend/templates/create_card.html
@@ -31,7 +31,7 @@
                     <input type="date" class="form-control" id="expiresAt">
                 </div>
                 
-                <button type="submit" class="btn btn-primary">/button>
+                <button type="submit" class="btn btn-primary">创建卡片</button>
                 <a href="/dashboard" class="btn btn-outline">返回</a>
             </form>
         </div>
