--- a/frontend/templates/create_card.html
+++ b/frontend/templates/create_card.html
@@ -55,7 +55,7 @@
             <span>退出</span>
         </a>
     </nav>
-
+    <script src="/static/js/auth.js"></script>
     <script src="/static/js/create_card.js"></script>
 </body>
 </html>
