--- a/frontend/templates/dashboard.html
+++ b/frontend/templates/dashboard.html
@@ -65,7 +65,7 @@
             <span>退出</span>
         </a>
     </nav>
-
+    <script src="/static/js/auth.js"></script>
     <script src="/static/js/dashboard.js"></script>
 </body>
 </html>
