--- a/frontend/templates/cards.html
+++ b/frontend/templates/cards.html
@@ -67,7 +67,7 @@
             <span>退出</span>
         </a>
     </nav>
-
+    <script src="/static/js/auth.js"></script>
     <script src="/static/js/cards.js"></script>
 </body>
 </html>
