1. 优化mode弹框 2. 添加卡片使用后发送邮件提醒创建者（未完成）

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -279,7 +279,7 @@ body {
 }
 
 /* 弹框样式 */
-.modal {
+/* .modal {
     display: none;
     position: fixed;
     top: 0;
@@ -304,7 +304,7 @@ body {
 .modal-content h3 {
     margin-top: 0;
     color: #333;
-}
+} */
 
 /* 表单样式 */
 .form-group {
