--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -278,34 +278,6 @@ body {
     cursor: pointer;
 }
 
-/* 弹框样式 */
-/* .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    z-index: 1000;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal-content {
-    background: white;
-    padding: 25px;
-    border-radius: 10px;
-    width: 90%;
-    max-width: 400px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-}
-
-.modal-content h3 {
-    margin-top: 0;
-    color: #333;
-} */
-
 /* 表单样式 */
 .form-group {
     margin: 20px 0;
@@ -366,8 +338,11 @@ body {
     box-shadow: 0 0 0 2px rgba(66, 133, 244, 0.2);
 }
 
-
-
+#email::placeholder {
+    font-size: 12px; /*  smaller font size */
+    color: #9ca3af; /*  darker gray color */
+    opacity: 1; /* 确保颜色显示正常（部分浏览器默认有透明度） */
+}
 /*=====================================================================================*/
 
 @keyframes spin {
