--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -22,7 +22,7 @@
                 
                 <div class="form-group">
                     <label class="form-label">邮箱</label>
-                    <input type="email" class="form-control" id="email" required>
+                    <input type="email" class="form-control" id="email" placeholder="接收或使用时接收邮件提醒" required >
                 </div>
                 
                 <div class="form-group">
