提取底部导航栏

--- a/frontend/templates/dashboard.html
+++ b/frontend/templates/dashboard.html
@@ -82,24 +82,7 @@
         </div>
     </div>
 
-    <nav class="navbar">
-        <a href="/dashboard" class="nav-item active">
-            <span>🏠</span>
-            <span>首页</span>
-        </a>
-        <a href="/cards" class="nav-item">
-            <span>🎴</span>
-            <span>卡片</span>
-        </a>
-        <a href="/cards/create" class="nav-item">
-            <span>➕</span>
-            <span>创建</span>
-        </a>
-        <a href="#" class="nav-item" onclick="logout()">
-            <span>🚪</span>
-            <span>退出</span>
-        </a>
-    </nav>
+    {{template "navbar.html" .}}
     <script src="/static/js/auth.js"></script>
     <script src="/static/js/dashboard.js"></script>
 </body>
