- 添加道友菜单（未完成）

--- a/frontend/templates/navbar.html
+++ b/frontend/templates/navbar.html
@@ -11,6 +11,10 @@
         <span>➕</span>
         <span>创建</span>
     </a>
+    <a href="/friends" class="nav-item">
+        <span>🌞</span>
+        <span>道友</span>
+    </a>
     <a href="#" class="nav-item" onclick="logout()">
         <span>🚪</span>
         <span>退出</span>
