--- a/frontend/templates/friends.html
+++ b/frontend/templates/friends.html
@@ -14,8 +14,13 @@
         </div>
 
         <div class="header">
+            <h1>邀请道友</h1>
+            <div id="myInviteFriends" style="position: relative;"></div>
+        </div>
+
+         <div class="header">
             <h1>道友邀请</h1>
-            <div id="myFriendsInvite" style="position: relative;"></div>
+            <div id="inviteMyFriends" style="position: relative;"></div>
         </div>
         
         <div class="card">
